<resources>
    <string name="app_name" translatable="false">Typhon</string>
    <string name="title">Title</string>
    <string name="app_desc">TypHon is an e-book reader that allows you to use a Rikai-like dictionary lookup for Japanese.</string>
    <string name="browse">Browse…</string>
    <string name="open_file">Open ePub file</string>
    <string name="open_library">My Books</string>
    <string name="profile_day">Switch to day mode</string>
    <string name="profile_night">Switch to night mode</string>
    <string name="manual_sync">Sync reading progress</string>
    <string name="prefs">Settings</string>
    <string name="show_toc">Show TOC</string>
    <string name="rolling_blind">Auto-scroll</string>
    <string name="about">About Typhon</string>
    <string name="about_gpl">Typhon is free software under the GPL v3.</string>
    <string name="error_open_bk">Error opening book: %s</string>
    <string name="dictionary_lookup">Look up in Dictionary</string>
    <string name="wikipedia_lookup">Search on Wikipedia</string>
    <string name="google_lookup">Search on Google</string>
    <string name="word_select">"You selected '%s'</string>
    <string name="loading_wait">Loading, please wait</string>
    <string name="install_oi">Please install OI File Manager from the Android Market.</string>
    <string name="cloud_bm">Cloud bookmarks</string>
    <string name="toc_label">Table of contents</string>
    <string name="syncing">"Syncing progress…"</string>
    <string name="sync_failed">Sync failed</string>
    <string name="connection_fail">Could not connect to the sync server.</string>
    <string name="never_read">Never</string>
    <string name="library">Library</string>
    <string name="book_details">Book details</string>
    <string name="book_by">By %s</string>
    <string name="last_read">Last read: %s</string>
    <string name="added_to_lib">Added to library: %s</string>
    <string name="view_details">View details</string>
    <string name="delete">Delete</string>
    <string name="scan_books">Scan for books</string>
    <string name="importing_books">Importing books…</string>
    <string name="scanning_epub">Scanning for EPUB files.</string>
    <string name="importing">Importing %1$d of %2$d</string>
    <string name="scan_folders">Scanning for EPUB files.\nFolders scanned: %d</string>
    <string name="pref_sync_settings">Sync settings</string>
    <string name="pref_email">E-mail address</string>
    <string name="pref_email_summary">Used to sync your progress across devices. Leave blank to disable syncing.</string>
    <string name="pref_email_message">Please enter a valid e-mail address</string>
    <string name="pref_device_name">Device name</string>
    <string name="pref_device_name_summary">Unique name for this device, for conflict resolution.</string>
    <string name="pref_device_name_message">Please enter a name for this device.</string>
    <string name="pref_access_key">Access Key</string>
    <string name="pref_access_key_summary">An access key is required to use the synchronization service. Visit the site to learn how to get a key.</string>
    <string name="pref_access_key_message">Please enter your access key.</string>
    <string name="pref_autoscroll_settings">Autoscroll settings</string>
    <string name="pref_scroll_style">Autoscroll style</string>
    <string name="pref_scroll_style_summary">Rolling blind or timer</string>
    <string name="pref_scroll_speed">Autoscrolling speed</string>
    <string name="pref_scroll_speed_summary">How many seconds a page will be displayed.</string>
    <string name="pref_my_books_settings">My Books settings</string>
    <string name="pref_copy_to_library">Copy to library folder</string>
    <string name="pref_copy_to_library_summary">Should Typhon copy files to its own library folder</string>
    <string name="pref_visual_settings">Visual settings</string>
    <string name="pref_full_screen">Full screen</string>
    <string name="pref_full_screen_summary">Hides all status bars.</string>
    <string name="pref_screen_orientation">Screen orientation</string>
    <string name="pref_screen_orientation_summary">Allows you to lock the screen orientation</string>
    <string name="pref_keep_screen_on">Keep screen on</string>
    <string name="pref_keep_screen_on_summary">Prevents the screen from locking while reading</string>
    <string name="pref_set_brightness">Brightness controls</string>
    <string name="pref_set_brightness_summary">Lets Typhon control screen brightness</string>
    <string name="pref_day_bright">Screen brightness</string>
    <string name="pref_day_bright_summary">For day mode</string>
    <string name="pref_day_night">Screen brightness</string>
    <string name="pref_day_night_summary">For night mode</string>
    <string name="pref_text_display_settings">Text display settings</string>
    <string name="pref_font_face">Font face</string>
    <string name="pref_font_face_summary">Main font for text display</string>
    <string name="pref_strip_whitespace">Strip whitespace</string>
    <string name="pref_strip_whitespace_summary">Strips out unneeded blank lines.</string>
    <string name="pref_itext_size">Text size</string>
    <string name="pref_itext_size_summary">The size of the font used for displaying books.</string>
    <string name="pref_margin_h">Horizontal margins</string>
    <string name="pref_margin_h_summary">Space on the left and right edge of the screen.</string>
    <string name="pref_margin_v">Vertical margins</string>
    <string name="pref_margin_v_summary">Space on the top and bottom edge of the screen.</string>
    <string name="pref_line_spacing">Line spacing</string>
    <string name="pref_line_spacing_summary">Adds extra vertical space between lines.</string>
    <string name="pref_colour_settings">Colour settings</string>
    <string name="pref_day_text">Text colour</string>
    <string name="pref_day_text_summary">For day mode</string>
    <string name="pref_day_highlight">Text highlight colour</string>
    <string name="pref_day_highlight_summary">For day mode</string>
    <string name="pref_day_bg">Background colour</string>
    <string name="pref_day_bg_summary">For day mode</string>
    <string name="pref_day_link">Link colour</string>
    <string name="pref_day_link_summary">For day mode</string>
    <string name="pref_night_text">Text colour</string>
    <string name="pref_night_text_summary">For night mode</string>
    <string name="pref_night_highlight">Text highlight colour</string>
    <string name="pref_night_highlight_summary">For night mode</string>
    <string name="pref_night_bg">Background colour</string>
    <string name="pref_night_bg_summary">For night mode</string>
    <string name="pref_night_link">Link colour</string>
    <string name="pref_night_link_summary">For night mode</string>
    <string name="pref_animations">Animations</string>
    <string name="pref_h_animation">Horizontal animations</string>
    <string name="pref_h_animation_summary">Horizontal page change animations</string>
    <string name="pref_v_animation">Vertical animations</string>
    <string name="pref_v_animation_summary">Vertical page change animations</string>
    <string name="pref_navigation_settings">Navigation settings</string>
    <string name="pref_scrolling">Enable scrolling</string>
    <string name="pref_scrolling_summary">Enable browser-style scrolling</string>
    <string name="pref_rikai">Enable rikai</string>
    <string name="pref_rikai_summary">Enable rikai Japanese dictionary lookup</string>
    <string name="pref_nav_vol">Enable volume buttons</string>
    <string name="pref_nav_vol_summary">Press volume up/down to change pages.</string>
    <string name="pref_nav_swipe_h">Enable horizontal swiping</string>
    <string name="pref_nav_swipe_h_summary">Swipe left/right to change pages.</string>
    <string name="pref_nav_swipe_v">Enable vertical swiping</string>
    <string name="pref_nav_swipe_v_summary">Swipe up/down to change pages.</string>
    <string name="pref_nav_tap_h">Enable tapping sides</string>
    <string name="pref_nav_tap_h_summary">Tap the left/right edge of the screen to change pages.</string>
    <string name="pref_nav_tap_v">Enable tapping top/bottom</string>
    <string name="pref_nav_tap_v_summary">Tap the top/bottom edge of the screen to change pages.</string>
    <string name="pref_show_pagenum">Show page numbers</string>
    <string name="pref_show_pagenum_summary">Shows page numbers while reading. It may take a few seconds for page numbers to be displayed the first time.</string>
    <string name="pref_nook_touch">Nook Touch Preferences</string>
   <string name="pref_nook_touch_button_nav">Button Navigation</string>
   <string name="pref_nook_touch_button_nav_summary">How should the buttons on the side of the Nook turn the page?</string>
    <string name="pref_reading_direction">Reading direction</string>
    <string name="pref_reading_direction_summary">Read left to right or right to left (Hebrew and Arabic)</string>
    <string name="pref_manage_sites">Manage OPDS / Calibre Catalogs</string>
    <string name="pref_manage_sites_summary">Add and remove custom online catalogs and Calibre servers.</string>
    <string name="pref_serif_font">Serif font</string>
    <string name="pref_serif_summary">Font to use if a book requests a Serif font.</string>
    <string name="pref_sans_serif_font">Sans-Serif font</string>
    <string name="pref_sans_serif_summary">Font to use if a book requests a Sans-Serif font.</string>
    <string name="pref_lang">UI Language</string>
    <string name="pref_lang_summary">Allows you to switch Typhon\'s language settings.</string>
    <string name="pref_accept_self_signed">Accept self-signed certificates</string>
    <string name="pref_accept_self_signed_summary">Allows you to connect to OPDS sites which use self-signed certificates.</string>
    <string name="pref_dim_system_ui">Dim System UI</string>
    <string name="pref_dim_system_ui_summary">Dims the System UI buttons when reading in fullscreen mode.</string>
    <string name="pref_long_short">Switch long press / short press</string>
    <string name="pref_long_short_summary">How to open books in the library</string>
    <string name="pref_dev_settings">Development settings</string>
    <string name="pref_acra">Send error reports</string>
    <string name="pref_acra_summary">Allow Typhon to send anonymous error reports when it crashes.</string>
    <string name="opds_settings">OPDS settings</string>
    <string name="pref_use_publisher_style">Use Publisher style (CSS)</string>
    <string name="pref_use_publisher_style_summary">Allow the book to change fonts, colours, etc.</string>
    <string name="pref_allow_css_colours">Allow the book to set colours</string>
    <string name="pref_css_colours_day_summary">For day mode</string>
    <string name="pref_css_colours_night_summary">For night mode</string>
    <string name="pref_always_open_book">Always open last book</string>
    <string name="pref_always_open_book_summary">Typhon will always start in the last read book instead of last open screen.</string>
    <string name="pref_sync_server">Sync Server</string>
    <string name="pref_sync_server_summary">Select which server you would like to sync with.</string>
    <string name="pref_sync_server_message">Please enter a sync server url.</string>
    <string name="dictionary_settings">Dictionary settings</string>
    <string name="dictionary_settings_summary">Add, remove, reorder and configure the dictionaries</string>
    <string name="dictionary_edit_form_name">Name</string>
    <string name="dictionary_edit_form_type">Type</string>
    <string name="dictionary_edit_form_synonyms">Show synonyms</string>
    <string name="dictionary_edit_form_examples">Show examples</string>
    <string name="dictionary_edit_form_deinflect">Deinflect verbs</string>
    <string name="dictionary_edit_form_lang">Language</string>
</resources>