<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="TyphonState">

    <PreferenceCategory android:title="@string/pref_rikai">
        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="rikai"
            android:summary="@string/pref_rikai_summary"
            android:title="@string/pref_rikai" />
        <Preference android:title="@string/dictionary_settings"
            android:summary="@string/dictionary_settings_summary">
            <intent
                android:action="org.zorgblub.rikai.download.settings.ui.DictionaryConfigActivity"/>
        </Preference>
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_sync_settings">

        <EditTextPreference
            android:dialogMessage="@string/pref_email_message"
            android:dialogTitle="@string/pref_email"
            android:inputType="textEmailAddress"
            android:key="email"
            android:summary="@string/pref_email_summary"
            android:title="@string/pref_email" />

        <EditTextPreference
            android:dependency="email"
            android:dialogMessage="@string/pref_device_name_message"
            android:dialogTitle="@string/pref_device_name"
            android:inputType="textNoSuggestions"
            android:key="device_name"
            android:summary="@string/pref_device_name_summary"
            android:title="@string/pref_device_name" />

        <EditTextPreference
            android:dependency="email"
            android:dialogMessage="@string/pref_access_key_message"
            android:dialogTitle="@string/pref_access_key"
            android:inputType="textPassword"
            android:key="access_key"
            android:summary="@string/pref_access_key_summary"
            android:title="@string/pref_access_key" />

        <EditTextPreference
            android:defaultValue="http://api.pageturner-reader.org/progress/"
            android:dependency="email"
            android:dialogMessage="@string/pref_sync_server_message"
            android:dialogTitle="@string/pref_sync_server"
            android:inputType="textNoSuggestions"
            android:key="sync_server"
            android:summary="@string/pref_sync_server_summary"
            android:title="@string/pref_sync_server" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="nook_prefs"
        android:title="@string/pref_nook_touch">

        <ListPreference
            android:defaultValue="backward"
            android:entries="@array/nook_touch_direction_labels"
            android:entryValues="@array/nook_touch_directions"
            android:key="nook_touch_top_buttons_direction"
            android:summary="@string/pref_nook_touch_button_nav_summary"
            android:title="@string/pref_nook_touch_button_nav" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_autoscroll_settings">

        <ListPreference
            android:defaultValue="rolling_blind"
            android:entries="@array/autoscrollLabels"
            android:entryValues="@array/autoscroll"
            android:key="scroll_style"
            android:summary="@string/pref_scroll_style_summary"
            android:title="@string/pref_scroll_style" />


        <com.hlidskialf.android.preference.SeekBarPreference
            android:defaultValue="60"
            android:dialogTitle="@string/pref_scroll_speed"
            android:key="scroll_speed"
            android:max="300"
            android:summary="@string/pref_scroll_speed_summary"
            android:title="@string/pref_scroll_speed" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_my_books_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="copy_to_library"
            android:summary="@string/pref_copy_to_library_summary"
            android:title="@string/pref_copy_to_library" />

        <ListPreference
            android:defaultValue="reversed"
            android:entries="@array/long_short_labels"
            android:entryValues="@array/long_short"
            android:key="long_short"
            android:summary="@string/pref_long_short_summary"
            android:title="@string/pref_long_short" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/opds_settings">

        <PreferenceScreen
            android:summary="@string/pref_manage_sites_summary"
            android:title="@string/pref_manage_sites">

            <intent android:action="net.zorgblub.typhon.activity.ManageSitesActivity" />

        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="accept_self_signed"
            android:summary="@string/pref_accept_self_signed_summary"
            android:title="@string/pref_accept_self_signed" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="visual_prefs"
        android:title="@string/pref_visual_settings">

        <net.zorgblub.typhon.prefs.LanguageSwitchPreference
            android:defaultValue="default"
            android:entries="@array/supported_languagesLabels"
            android:entryValues="@array/supported_languages"
            android:key="custom_lang"
            android:summary="@string/pref_lang_summary"
            android:title="@string/pref_lang" />


        <CheckBoxPreference
            android:defaultValue="true"
            android:key="full_screen"
            android:summary="@string/pref_full_screen_summary"
            android:title="@string/pref_full_screen" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="always_open_last_book"
            android:summary="@string/pref_always_open_book_summary"
            android:title="@string/pref_always_open_book" />


        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="full_screen"
            android:key="dim_system_ui"
            android:summary="@string/pref_dim_system_ui_summary"
            android:title="@string/pref_dim_system_ui" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_pagenum"
            android:summary="@string/pref_show_pagenum_summary"
            android:title="@string/pref_show_pagenum" />

        <ListPreference
            android:defaultValue="no_lock"
            android:entries="@array/orientationLabels"
            android:entryValues="@array/orientation"
            android:key="screen_orientation"
            android:summary="@string/pref_screen_orientation_summary"
            android:title="@string/pref_screen_orientation" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="keep_screen_on"
            android:summary="@string/pref_keep_screen_on_summary"
            android:title="@string/pref_keep_screen_on" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="set_brightness"
            android:summary="@string/pref_set_brightness_summary"
            android:title="@string/pref_set_brightness" />

        <com.hlidskialf.android.preference.SeekBarPreference
            android:defaultValue="50"
            android:dependency="set_brightness"
            android:dialogTitle="@string/pref_day_bright"
            android:key="day_bright"
            android:max="100"
            android:summary="@string/pref_day_bright_summary"
            android:title="@string/pref_day_bright" />

        <com.hlidskialf.android.preference.SeekBarPreference
            android:defaultValue="50"
            android:dependency="set_brightness"
            android:dialogTitle="@string/pref_day_night"
            android:key="night_bright"
            android:max="100"
            android:summary="@string/pref_day_night_summary"
            android:title="@string/pref_day_night" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_text_display_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="allow_styling"
            android:summary="@string/pref_use_publisher_style_summary"
            android:title="@string/pref_use_publisher_style" />

        <ListPreference
            android:defaultValue="boku2r"
            android:entries="@array/fontLabels"
            android:entryValues="@array/fonts"
            android:key="font_face"
            android:summary="@string/pref_font_face_summary"
            android:title="@string/pref_font_face" />

        <ListPreference
            android:defaultValue="kokoro"
            android:entries="@array/fontLabels"
            android:entryValues="@array/fonts"
            android:key="serif_font"
            android:summary="@string/pref_serif_summary"
            android:title="@string/pref_serif_font" />

        <ListPreference
            android:defaultValue="boku2r"
            android:entries="@array/fontLabels"
            android:entryValues="@array/fonts"
            android:key="sans_serif_font"
            android:summary="@string/pref_sans_serif_summary"
            android:title="@string/pref_sans_serif_font" />


        <CheckBoxPreference
            android:defaultValue="true"
            android:key="strip_whitespace"
            android:summary="@string/pref_strip_whitespace_summary"
            android:title="@string/pref_strip_whitespace" />

        <com.hlidskialf.android.preference.SeekBarPreference
            android:defaultValue="18"
            android:dialogTitle="@string/pref_itext_size"
            android:key="itext_size"
            android:max="48"
            android:summary="@string/pref_itext_size_summary"
            android:title="@string/pref_itext_size" />

        <com.hlidskialf.android.preference.SeekBarPreference
            android:defaultValue="30"
            android:dialogTitle="@string/pref_margin_h"
            android:key="margin_h"
            android:max="150"
            android:summary="@string/pref_margin_h_summary"
            android:title="@string/pref_margin_h" />

        <com.hlidskialf.android.preference.SeekBarPreference
            android:defaultValue="25"
            android:dialogTitle="@string/pref_margin_v"
            android:key="margin_v"
            android:max="150"
            android:summary="@string/pref_margin_v_summary"
            android:title="@string/pref_margin_v" />
        <com.hlidskialf.android.preference.SeekBarPreference
            android:defaultValue="0"
            android:dialogTitle="@string/pref_line_spacing"
            android:key="line_spacing"
            android:max="50"
            android:summary="@string/pref_line_spacing_summary"
            android:title="@string/pref_line_spacing" />

        <ListPreference
            android:defaultValue="left_to_right"
            android:entries="@array/reading_directionsLabels"
            android:entryValues="@array/reading_directions"
            android:key="reading_direction"
            android:summary="@string/pref_reading_direction_summary"
            android:title="@string/pref_reading_direction" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_colour_settings">

        <net.zorgblub.typhon.prefs.ColourChooserPref
            android:defaultValue="-16777216"
            android:key="day_text"
            android:summary="@string/pref_day_text_summary"
            android:title="@string/pref_day_text" />

        <net.zorgblub.typhon.prefs.ColourChooserPref
            android:defaultValue="-256"
            android:key="day_highlight"
            android:summary="@string/pref_day_highlight_summary"
            android:title="@string/pref_day_highlight" />

        <net.zorgblub.typhon.prefs.ColourChooserPref
            android:defaultValue="-1"
            android:key="day_bg"
            android:summary="@string/pref_day_bg_summary"
            android:title="@string/pref_day_bg" />

        <net.zorgblub.typhon.prefs.ColourChooserPref
            android:defaultValue="-16776961"
            android:key="day_link"
            android:summary="@string/pref_day_link_summary"
            android:title="@string/pref_day_link" />


        <net.zorgblub.typhon.prefs.ColourChooserPref
            android:defaultValue="-7829368"
            android:key="night_text"
            android:summary="@string/pref_night_text_summary"
            android:title="@string/pref_night_text" />

        <net.zorgblub.typhon.prefs.ColourChooserPref
            android:defaultValue="-256"
            android:key="night_highlight"
            android:summary="@string/pref_night_highlight_summary"
            android:title="@string/pref_night_highlight" />

        <net.zorgblub.typhon.prefs.ColourChooserPref
            android:defaultValue="-16777216"
            android:key="night_bg"
            android:summary="@string/pref_night_bg_summary"
            android:title="@string/pref_night_bg" />

        <net.zorgblub.typhon.prefs.ColourChooserPref
            android:defaultValue="-23296"
            android:key="night_link"
            android:summary="@string/pref_night_link_summary"
            android:title="@string/pref_night_link" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="allow_styling"
            android:key="day_allow_style_colours"
            android:summary="@string/pref_css_colours_day_summary"
            android:title="@string/pref_allow_css_colours" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="allow_styling"
            android:key="night_allow_style_colours"
            android:summary="@string/pref_css_colours_night_summary"
            android:title="@string/pref_allow_css_colours" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_animations">

        <ListPreference
            android:defaultValue="slide"
            android:dependency="rikai"
            android:entries="@array/h_animLabels"
            android:entryValues="@array/h_anim"
            android:key="h_animation"
            android:summary="@string/pref_h_animation_summary"
            android:title="@string/pref_h_animation" />


        <ListPreference
            android:defaultValue="slide"
            android:dependency="rikai"
            android:entries="@array/v_animLabels"
            android:entryValues="@array/v_anim"
            android:key="v_animation"
            android:summary="@string/pref_v_animation_summary"
            android:title="@string/pref_v_animation" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_navigation_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="rikai"
            android:disableDependentsState="true"
            android:key="scrolling"
            android:summary="@string/pref_scrolling_summary"
            android:title="@string/pref_scrolling" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="scrolling"
            android:key="nav_vol"
            android:summary="@string/pref_nav_vol_summary"
            android:title="@string/pref_nav_vol" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="scrolling"
            android:key="nav_swipe_h"
            android:summary="@string/pref_nav_swipe_h_summary"
            android:title="@string/pref_nav_swipe_h" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="scrolling"
            android:key="nav_swipe_v"
            android:summary="@string/pref_nav_swipe_v_summary"
            android:title="@string/pref_nav_swipe_v" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="scrolling"
            android:key="nav_tap_h"
            android:summary="@string/pref_nav_tap_h_summary"
            android:title="@string/pref_nav_tap_h" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="scrolling"
            android:key="nav_tap_v"
            android:summary="@string/pref_nav_tap_v_summary"
            android:title="@string/pref_nav_tap_v" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_dev_settings">


        <CheckBoxPreference
            android:defaultValue="true"
            android:key="acra.enable"
            android:summary="@string/pref_acra_summary"
            android:title="@string/pref_acra" />

    </PreferenceCategory>

</PreferenceScreen>
